changing which workspaces are made available via ui

--- a/orchestration/workspace.yaml
+++ b/orchestration/workspace.yaml
@@ -13,6 +13,11 @@ load_from:
 #       port: 4003
 #       location_name: "pipeline_nsw_doe"
     - python_module: pipeline_nsw_doe
-    - python_module: demo_pipeline_scaling_tpch
+
+    # # enables these two when doing local development. But when merging into main comment them out
+    # # so that they dont confuse users of the code space. the requires secret one also requires  env i wont share
+    # - python_module: demo_pipeline_scaling_tpch
+    # - python_module: pipeline_nsw_doe_requires_secrets
+
+
     # - python_module: demo_pipeline_jaffle_shop
-    - python_module: pipeline_nsw_doe_requires_secrets
