--- a/dagster_cloud.yaml
+++ b/dagster_cloud.yaml
@@ -5,15 +5,15 @@ locations:
     build:
         directory: .
     working_directory: ./orchestration
-  # - code_source:
-  #     package_name: pipeline_nsw_doe_requires_secrets
-  #   location_name: nsw-doe-data-stack-in-a-box-requires-secrets
-  #   build:
-  #       directory: .
-  #   working_directory: ./orchestration
-  # - code_source:
-  #     package_name: demo_pipeline_scaling_tpch
-  #   location_name: demo-pipeline-scaling-tpch
-  #   build:
-  #       directory: .
-  #   working_directory: ./orchestration
+  - code_source:
+      package_name: pipeline_nsw_doe_requires_secrets
+    location_name: nsw-doe-data-stack-in-a-box-requires-secrets
+    build:
+        directory: .
+    working_directory: ./orchestration
+  - code_source:
+      package_name: demo_pipeline_scaling_tpch
+    location_name: demo-pipeline-scaling-tpch
+    build:
+        directory: .
+    working_directory: ./orchestration
