fixing codepace missing env variables

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -22,8 +22,14 @@ tasks:
       # workaround as cant get dynamic manifest.json to build
       - cd ${GITHUB_WORKSPACE}/${NSW_DOE_DATA_STACK_IN_A_BOX_DBT_PROJECT_DIR} && dbt parse
 
-      - cd transformation/demo_transformation_jaffle_shop && dbt deps
-      - cd transformation/demo_transformation_jaffle_shop && dbt parse
+      - cd ${GITHUB_WORKSPACE}/transformation/demo_transformation_jaffle_shop && dbt deps
+      - cd ${GITHUB_WORKSPACE}/transformation/demo_transformation_jaffle_shop && dbt parse
+
+      - cd ${GITHUB_WORKSPACE}/transformation/pipeline_nsw_doe_requires_secrets && dbt deps
+      - cd ${GITHUB_WORKSPACE}/transformation/pipeline_nsw_doe_requires_secrets && dbt parse
+
+      - cd ${GITHUB_WORKSPACE}/transformation/demo_pipeline_scaling_tpch && dbt deps
+      - cd ${GITHUB_WORKSPACE}/transformation/demo_pipeline_scaling_tpch && dbt parse
 
 
   node_deps:
