--- a/.github/workflows/ci_dev_quick_checks.yml
+++ b/.github/workflows/ci_dev_quick_checks.yml
@@ -49,7 +49,7 @@ jobs:
         with:
           python-version: "3.11.x"
       - name: check python with ruff
-        uses: chartboost/ruff-action@v1
+        uses: astral-sh/ruff-action@v1
       - name: Setup Node
         uses: actions/setup-node@v4.0.2
         with:
