--- a/requirements.in
+++ b/requirements.in
@@ -3,7 +3,7 @@ dbt-metricflow[duckdb]==0.7.1
 
 ipykernel
 
-duckdb>=1.0.0 #latest version for mother duck
+duckdb==1.1.1 #latest version for mother duck
 
 # dagster deps
 dagster-dbt
