--- a/.github/workflows/ci_test_branch_deployments_only_dbt.yml
+++ b/.github/workflows/ci_test_branch_deployments_only_dbt.yml
@@ -84,7 +84,7 @@ jobs:
                 echo models modified
                 dbt ls --exclude "source:* +*github*+ +*google*+" --models state:modified --defer --state ${{github.workspace}}/transformation/transformation_nsw_doe/target/last_manifest --profiles-dir ${{github.workspace}}/transformation/transformation_nsw_doe
                 echo building modified models
-                dbt build --exclude "source:* +*github*+ +*google*+ *snapshot*" --models state:modified+ --defer --state ${{github.workspace}}/transformation/transformation_nsw_doe/target/last_manifest --profiles-dir ${{github.workspace}}/transformation/transformation_nsw_doe
+                dbt build --exclude "source:* +*github*+ +*google*+ *snapshot*" --models state:modified --defer --state ${{github.workspace}}/transformation/transformation_nsw_doe/target/last_manifest --profiles-dir ${{github.workspace}}/transformation/transformation_nsw_doe
 
 
             # reoving datafold until we get a motherduck connection
