fixing dagster embeded issue with version changing

--- a/requirements.in
+++ b/requirements.in
@@ -6,6 +6,7 @@ ipykernel
 duckdb==1.1.1 #latest version for mother duck
 
 # dagster deps
+dagster
 dagster-dbt
 dagster-duckdb
 dagster-duckdb-pandas
@@ -44,8 +45,7 @@ ydata_profiling
 ipywidgets
 
 # dlt
-dagster-embedded-elt
-# dlt[motherduck] # cant use motherduck yet with dlt if duckdb > 0.10
+dagster-embedded-elt==0.23.11 # having some issues with later versions and dlt
 google-analytics-data
 google-api-python-client
 google-auth-oauthlib
