--- a/requirements.txt
+++ b/requirements.txt
@@ -128,7 +128,7 @@ dacite==1.8.1
     # via ydata-profiling
 daff==1.3.46
     # via dbt-core
-dagster==1.8.11
+dagster==1.7.11
     # via
     #   dagster-aws
     #   dagster-cloud
@@ -143,24 +143,24 @@ dagster==1.8.11
     #   dagster-pandera
     #   dagster-webserver
     #   dagstermill
-dagster-aws==0.24.11
-dagster-cloud==1.8.11
-dagster-cloud-cli==1.8.11
+dagster-aws==0.23.11
+dagster-cloud==1.7.11
+dagster-cloud-cli==1.7.11
     # via dagster-cloud
-dagster-dbt==0.24.11
-dagster-duckdb==0.24.11
+dagster-dbt==0.23.11
+dagster-duckdb==0.23.11
     # via dagster-duckdb-pandas
-dagster-duckdb-pandas==0.24.11
-dagster-embedded-elt==0.24.11
-dagster-graphql==1.8.11
+dagster-duckdb-pandas==0.23.11
+dagster-embedded-elt==0.23.11
+dagster-graphql==1.7.11
     # via dagster-webserver
-dagster-msteams==0.24.11
-dagster-openai==0.24.11
-dagster-pandera==0.24.11
-dagster-pipes==1.8.11
+dagster-msteams==0.23.11
+dagster-openai==0.23.11
+dagster-pandera==0.23.11
+dagster-pipes==1.7.11
     # via dagster
-dagster-webserver==1.8.11
-dagstermill==0.24.11
+dagster-webserver==1.7.11
+dagstermill==0.23.11
 dataclasses-json==0.6.7
     # via
     #   langchain
@@ -435,7 +435,7 @@ langchain-core==0.1.52
     #   langchain-text-splitters
 langchain-text-splitters==0.0.2
     # via langchain
-langsmith==0.1.135
+langsmith==0.1.136
     # via
     #   langchain
     #   langchain-community
@@ -461,7 +461,7 @@ markupsafe==3.0.1
     #   jinja2
     #   mako
     #   nbconvert
-marshmallow==3.22.0
+marshmallow==3.23.0
     # via dataclasses-json
 mashumaro==3.13.1
     # via
@@ -537,6 +537,7 @@ numpy==1.25.2
     # via
     #   cmdstanpy
     #   contourpy
+    #   dagster-pandera
     #   faiss-cpu
     #   imagehash
     #   langchain
@@ -560,7 +561,7 @@ numpy==1.25.2
     #   ydata-profiling
 oauthlib==3.2.2
     # via requests-oauthlib
-openai==1.51.2
+openai==1.52.0
     # via dagster-openai
 openpyxl==3.1.5
 ordered-set==4.1.0
@@ -605,7 +606,7 @@ pandas==2.0.3
     #   statsmodels
     #   visions
     #   ydata-profiling
-pandera==0.20.4
+pandera==0.19.3
     # via dagster-pandera
 pandocfilters==1.5.1
     # via nbconvert
@@ -630,7 +631,9 @@ pathvalidate==3.2.1
 patsy==0.5.6
     # via statsmodels
 pendulum==3.0.0
-    # via dlt
+    # via
+    #   dagster
+    #   dlt
 petl==1.7.15
     # via frictionless
 pex==2.20.3
@@ -681,7 +684,7 @@ protobuf==4.25.5
     #   grpcio-health-checking
     #   grpcio-status
     #   proto-plus
-psutil==6.0.0
+psutil==6.1.0
     # via ipykernel
 ptyprocess==0.7.0
     # via pexpect
@@ -728,6 +731,7 @@ python-dateutil==2.9.0.post0
     # via
     #   botocore
     #   croniter
+    #   dagster
     #   dbt-common
     #   dbt-semantic-interfaces
     #   frictionless
@@ -842,7 +846,7 @@ rpds-py==0.20.0
     #   referencing
 rsa==4.9
     # via google-auth
-ruff==0.6.9
+ruff==0.7.0
 s3fs==2024.9.0
 s3transfer==0.10.3
     # via boto3
