--- a/requirements.in
+++ b/requirements.in
@@ -1,5 +1,5 @@
 dbt-duckdb>=1.8.0
-dbt-metricflow[duckdb]==0.7.1
+dbt-metricflow[duckdb]
 
 ipykernel
 
@@ -45,7 +45,7 @@ ydata_profiling
 ipywidgets
 
 # dlt
-dagster-embedded-elt==0.23.11 # having some issues with later versions and dlt
+dagster-embedded-elt #==0.23.11 # having some issues with later versions and dlt
 google-analytics-data
 google-api-python-client
 google-auth-oauthlib
