--- a/requirements.txt
+++ b/requirements.txt
@@ -60,11 +60,15 @@ bleach==6.1.0
     # via nbconvert
 boto3==1.35.36
     # via dagster-aws
+boto3-stubs-lite==1.35.43
+    # via dagster-aws
 botocore==1.35.36
     # via
     #   aiobotocore
     #   boto3
     #   s3transfer
+botocore-stubs==1.35.43
+    # via boto3-stubs-lite
 cachetools==5.5.0
     # via google-auth
 certifi==2024.8.30
@@ -128,7 +132,7 @@ dacite==1.8.1
     # via ydata-profiling
 daff==1.3.46
     # via dbt-core
-dagster==1.7.11
+dagster==1.8.12
     # via
     #   dagster-aws
     #   dagster-cloud
@@ -143,24 +147,24 @@ dagster==1.7.11
     #   dagster-pandera
     #   dagster-webserver
     #   dagstermill
-dagster-aws==0.23.11
-dagster-cloud==1.7.11
-dagster-cloud-cli==1.7.11
+dagster-aws==0.24.12
+dagster-cloud==1.8.12
+dagster-cloud-cli==1.8.12
     # via dagster-cloud
-dagster-dbt==0.23.11
-dagster-duckdb==0.23.11
+dagster-dbt==0.24.12
+dagster-duckdb==0.24.12
     # via dagster-duckdb-pandas
-dagster-duckdb-pandas==0.23.11
-dagster-embedded-elt==0.23.11
-dagster-graphql==1.7.11
+dagster-duckdb-pandas==0.24.12
+dagster-embedded-elt==0.24.12
+dagster-graphql==1.8.12
     # via dagster-webserver
-dagster-msteams==0.23.11
-dagster-openai==0.23.11
-dagster-pandera==0.23.11
-dagster-pipes==1.7.11
+dagster-msteams==0.24.12
+dagster-openai==0.24.12
+dagster-pandera==0.24.12
+dagster-pipes==1.8.12
     # via dagster
-dagster-webserver==1.7.11
-dagstermill==0.23.11
+dagster-webserver==1.8.12
+dagstermill==0.24.12
 dataclasses-json==0.6.7
     # via
     #   langchain
@@ -502,6 +506,14 @@ multimethod==1.10
     #   pandera
     #   visions
     #   ydata-profiling
+mypy-boto3-ecs==1.35.43
+    # via boto3-stubs-lite
+mypy-boto3-emr==1.35.39
+    # via boto3-stubs-lite
+mypy-boto3-emr-serverless==1.35.25
+    # via boto3-stubs-lite
+mypy-boto3-glue==1.35.25
+    # via boto3-stubs-lite
 mypy-extensions==1.0.0
     # via
     #   black
@@ -537,7 +549,6 @@ numpy==1.25.2
     # via
     #   cmdstanpy
     #   contourpy
-    #   dagster-pandera
     #   faiss-cpu
     #   imagehash
     #   langchain
@@ -606,7 +617,7 @@ pandas==2.0.3
     #   statsmodels
     #   visions
     #   ydata-profiling
-pandera==0.19.3
+pandera==0.20.4
     # via dagster-pandera
 pandocfilters==1.5.1
     # via nbconvert
@@ -631,9 +642,7 @@ pathvalidate==3.2.1
 patsy==0.5.6
     # via statsmodels
 pendulum==3.0.0
-    # via
-    #   dagster
-    #   dlt
+    # via dlt
 petl==1.7.15
     # via frictionless
 pex==2.20.3
@@ -731,7 +740,6 @@ python-dateutil==2.9.0.post0
     # via
     #   botocore
     #   croniter
-    #   dagster
     #   dbt-common
     #   dbt-semantic-interfaces
     #   frictionless
@@ -1001,11 +1009,16 @@ typer==0.12.5
     #   dagster-cloud-cli
     #   dagster-dbt
     #   frictionless
+types-awscrt==0.22.0
+    # via botocore-stubs
+types-s3transfer==0.10.3
+    # via boto3-stubs-lite
 types-setuptools==75.1.0.20241014
     # via requirements-parser
 typing-extensions==4.12.2
     # via
     #   alembic
+    #   boto3-stubs-lite
     #   dagster
     #   dbt-adapters
     #   dbt-common
@@ -1015,6 +1028,10 @@ typing-extensions==4.12.2
     #   ipython
     #   mashumaro
     #   metricflow
+    #   mypy-boto3-ecs
+    #   mypy-boto3-emr
+    #   mypy-boto3-emr-serverless
+    #   mypy-boto3-glue
     #   openai
     #   pydantic
     #   sqlalchemy
