hot fix deployment to dagster plus

--- a/.github/workflows/ci_prod_deploy.yml
+++ b/.github/workflows/ci_prod_deploy.yml
@@ -103,8 +103,8 @@ jobs:
           source .venv/bin/activate
           # currently requirements.txt is stored at total project level one level above dagster project
           uv pip install -r requirements.txt
-          cd ./${{ env.NSW_DOE_DATA_STACK_IN_A_BOX_DAGSTER_PROJECT_DIR }}
-          uv pip install .
+          # cd ./${{ env.NSW_DOE_DATA_STACK_IN_A_BOX_DAGSTER_PROJECT_DIR }}
+          # uv pip install .
 
           cd ./transformation/demo_transformation_scaling_tpch
           dbt deps
