hot fix deployment to dagster plus

--- a/.github/workflows/ci_prod_deploy.yml
+++ b/.github/workflows/ci_prod_deploy.yml
@@ -103,8 +103,6 @@ jobs:
           source .venv/bin/activate
           # currently requirements.txt is stored at total project level one level above dagster project
           uv pip install -r requirements.txt
-          # cd ./${{ env.NSW_DOE_DATA_STACK_IN_A_BOX_DAGSTER_PROJECT_DIR }}
-          # uv pip install .
 
           cd ./transformation/demo_transformation_scaling_tpch
           dbt deps
@@ -113,6 +111,9 @@ jobs:
           cd ./transformation/transformation_nsw_doe
           dbt deps
           cd ../..
+
+          cd ./${{ env.NSW_DOE_DATA_STACK_IN_A_BOX_DAGSTER_PROJECT_DIR }}
+          uv pip install .
 
           dagster-dbt project prepare-for-deployment --file ./${{ env.DAGSTER_PROJECT_NAME }}/project.py
           dagster-dbt project prepare-for-deployment --file ./pipeline_nsw_doe_requires_secrets/project.py
