--- a/transformation/transformation_nsw_doe/dbt_project.yml
+++ b/transformation/transformation_nsw_doe/dbt_project.yml
@@ -12,7 +12,7 @@ vars:
 
 model-paths: ["models"]
 seed-paths: ["seeds"]
-test-paths: ["tests"]
+test-paths: ["data_tests"]
 analysis-paths: ["analysis"]
 macro-paths: ["macros"]
 
@@ -23,6 +23,9 @@ clean-targets:
   - "logs"
 
 require-dbt-version: [">=1.0.0", "<2.0.0"]
+
+tests:
+  +store_failures: true  # all tests
 
 models:
   +tags:
