--- a/transformation/transformation_nsw_doe/models/staging/nsw_doe/sources.yml
+++ b/transformation/transformation_nsw_doe/models/staging/nsw_doe/sources.yml
@@ -10,6 +10,12 @@ sources:
       - name: raw__nsw_doe_datansw__master_dataset
         loader: Dagster
         loaded_at_field: _load_timestamp
+        columns:
+          - name: School_Code
+            # doesnt make its way into dagster :(
+            # data_tests:
+            #   - dbt_expectations.expect_column_values_to_not_be_null:
+            #       row_condition: "School_Code is not null" # (Optional)
         meta:
           dagster:
             asset_key: ["{{ env_var('NSW_DOE_DATA_STACK_IN_A_BOX_TARGET_SCHEMA') }}","raw__nsw_doe_datansw__master_dataset"] # This metadata specifies the corresponding Dagster asset for this dbt source.
@@ -28,7 +34,6 @@ sources:
           dagster:
             asset_key: ["{{ env_var('NSW_DOE_DATA_STACK_IN_A_BOX_TARGET_SCHEMA') }}","raw__nsw_doe_datansw__ram"] # This metadata specifies the corresponding Dagster asset for this dbt source.
       - name: raw_nsw_doe_datansw_aparent_retention_rate_10_to_12
-        alias:
         meta:
           dagster:
             asset_key: ["raw__nsw_doe_datansw__aparent_retention_rate_10_to_12"] # This metadata specifies the corresponding Dagster asset for this dbt source.
