adding data quality examples (#38)
* adding data quality examples

* adding data quality examples

* adding data quality examples

* adding model quality checks and data quality tests

* fixing sql fluff

* adding dlt schema to cotnract

* adding dlt schema to cotnract

--- a/.github/workflows/ci_dev_quick_checks.yml
+++ b/.github/workflows/ci_dev_quick_checks.yml
@@ -68,7 +68,7 @@ jobs:
       - name: Lint SQL
         run: |
           echo schema $NSW_DOE_DATA_STACK_IN_A_BOX_TARGET_SCHEMA
-          cd ${{github.workspace}}/transformation/transformation_nsw_doe
+          cd ${{github.workspace}}
           sqlfluff lint --format github-annotation-native
       # required to set path for pytest
       - name: set pythonpath
@@ -84,3 +84,8 @@ jobs:
       #     npm install --prefix ./reports
       #     npm run sources --prefix ./reports
       #     npm run build --prefix ./reports
+      - name: Dbt project evaluator
+        run: |
+          echo schema $NSW_DOE_DATA_STACK_IN_A_BOX_TARGET_SCHEMA
+          cd ${{github.workspace}}/transformation/transformation_nsw_doe
+          dbt run -s package:dbt_project_evaluator
