--- a/transformation/transformation_nsw_doe/dbt_project.yml
+++ b/transformation/transformation_nsw_doe/dbt_project.yml
@@ -8,11 +8,11 @@ profile: 'nsw_doe_data_stack_in_a_box_profile'
 
 vars:
   truncate_timespan_to: "{{ current_timestamp() }}"
-  "dbt_date:time_zone": "America/Los_Angeles"
+  "dbt_date:time_zone": "Australia/Sydney"
 
 model-paths: ["models"]
 seed-paths: ["seeds"]
-test-paths: ["tests"]
+test-paths: ["data_tests"]
 analysis-paths: ["analysis"]
 macro-paths: ["macros"]
 
@@ -23,6 +23,9 @@ clean-targets:
   - "logs"
 
 require-dbt-version: [">=1.0.0", "<2.0.0"]
+
+tests:
+  +store_failures: true  # all tests
 
 models:
   +tags:
