--- a/requirements.in
+++ b/requirements.in
@@ -7,6 +7,8 @@ duckdb==1.1.1 #latest version for mother duck
 
 # dagster deps
 dagster
+dagster-powerbi
+dagster-tableau
 dagster-dbt
 dagster-duckdb
 dagster-duckdb-pandas
